Revert "Fixing LESS global layout overflow on mobile (3)"
This reverts commit 6320afae6a18a63fee30572856f339269ca6721b.

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -87,8 +87,6 @@
 .gallery__locations-list {
     overflow-y: auto;
     overflow-x: hidden;
-    height: auto;
-    height: -webkit-fill-available;
 
     .gallery__location-item {
         border-bottom: 2px solid @border-color;
