--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -1,7 +1,7 @@
 @import './globals.less';
 
 .places {
-    height: 100%;
+    height: 100vh;
     height: -webkit-fill-available;
 }
 
